--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <h1>Jakub Zakrzewski</h1>
     <section>
-      <p>Cześć! Nazywam się Jakub Zakrzewski i jestem programistą C#/Unity. Moją pasją są aplikacje mobilne i gry. Zajmuję się także tworzeniem rozwiązań online dla marketingu. Nie straszne mi zarzązdanie serwerami Unix-owymi oraz Windowsowymi.</p>
+      <p style="background: black; opacity: 40%;">Hi! My name is Jakub Zakrzewski and I'm a C#/.Net Core programmer. My passion are mobile applications and games. I also create online solutions for marketing. I am not afraid to manage Unix and Windows servers.</p>
       <a href="https://github.com/zakrzus" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
@@ -28,13 +28,50 @@
   </header>
   <main>
     <section>
-      <h3>Projekty i Osiągnięcia</h3>
+      <h3>Projects and Achievements</h3>
+      <article class='course'>
+          <div class='title'>
+            <h4>Yearly Planner</a></h4>
+          </div>
+          <div class="descrition">
+            <p>A tool for planning annual costs for marketing campaigns.</p>
+            <p><strong>Tech stack: .NET Core MVC + JavaScript + jQuery + HTML 5 + Bootstrap + CSS + EF6 Core + MsSql</strong></p>
+          </div>
+        </article>
+        <article class='course'>
+          <div class='title'>
+              <h4>Leads Tunnel</h4>
+          </div>
+          <div class="descrition">
+            <p>A tool for transferring contacts from advertising platforms such as Facebook, Google, Linkedin with an intuitive graphical interface.</p>
+            <p><strong>Tech stack: .NET Standard MVC + JavaScript + jQuery + HTML 5 + CSS + EF6 + MsSql</strong></p>
+          </div>
+        </article>
+        <article class='course'>
+          <div class='title'>
+            <h4>Facebook Ads Preview Tool</h4>
+          </div>
+          <div class="descrition">
+            <p>A tool to generate previews of Facebook ads with a consistent view for the client.</p>
+            <p><strong>Tech stack: .NET Core MVC + JavaScript + jQuery + HTML 5 + CSS + EF6 + MsSql</strong></p>
+          </div>
+        </article>
+        <article class='course'>
+          <div class='title'>
+            <h4>Bussines logic API</h4>
+          </div>
+          <div class="descrition">
+            <p>Web application written in .NET Core MVC. A tool that receives data from client software and saves it in the cloud (Google Sheets) </p>
+            <p><strong>Tech stack: .NET Core MVC</strong></p>
+          </div>
+        </article>
+        <hr>
       <article class='course'>
         <div class='title'>
           <h4><a href="https://play.google.com/store/apps/details?id=com.ntlstudio.sudoku" target="_blank">Android: Sudoku</a></h4>
         </div>
         <div class="descrition">
-          <p>Stworzona w C# i platofrmie Unity gra sudoku na urządzenia mobilne z systemem android.</p>
+          <p>Created in C# platoform Unity Sudoku game for mobile devices with android system.</p>
         </div>
       </article>
       <article class='course'>
@@ -42,23 +79,23 @@
             <h4><a href="https://play.google.com/store/apps/details?id=com.chubby.devzak.pl" target="_blank">Android: Chubby Shooter</a></h4>
         </div>
         <div class="descrition">
-          <p>Stworzona w C# i platofrmie Unity gra zręcznościowa.</p>
+          <p>An arcade game created in C# and Unity platoform.</p>
         </div>
       </article>
       <article class='course'>
         <div class='title'>
-          <h4><a href="https://www.hackster.io/zakrzu/arduino-pc-monitor-66c07a" target="_blank">Artykuł - Arduino PC Monitor</a></h4>
+          <h4><a href="https://www.hackster.io/zakrzu/arduino-pc-monitor-66c07a" target="_blank">Article - Arduino PC Monitor</a></h4>
         </div>
         <div class="descrition">
-          <p>Tutorial w języku angielskim jak wykorzystać urządzenie Arduino, Ekran LCD I2C do obserwacji temperatur podzespołów komputera z wykorzystaniem Visual Studio C# oraz C.</p>
+          <p>A tutorial in English on how to use Arduino device, LCD Screen I2C to observe the temperature of computer components using Visual Studio C# and C.</p>
         </div>
       </article>
       <article class='course'>
         <div class='title'>
-          <h4>Projekt stanowiska do odwadniania osmotycznego.</h4>
+          <h4>Osmotic drainage station design.</h4>
         </div>
         <div class="descrition">
-          <p>Praca dyplomowa - projekt stanowiska do odwadniania osmotycznego wykonany w programie AutoCAD.</p>
+          <p>Diploma thesis - a project of a stand for osmotic drainage made in AutoCAD program.</p>
         </div>
       </article>
     </section>
@@ -66,7 +103,7 @@
       <h3>Skills</h3>
       <div class='skills'>
         <div class='column'>
-          <h4>Języki programowania/środowiska:</h4>
+          <h4>Programming languages:</h4>
           <ul>
             <li>C#</li>
             <li>C</li>
@@ -78,16 +115,16 @@
           </ul>
         </div>
         <div class='column'>
-          <h4>Umiejętności:</h4>
+          <h4>Skills:</h4>
           <ul>
-            <li>Zarządzanie serwerami VPS</li>
-            <li>Instalacja i konfiguracja oprogramowania serwerów</li>
-            <li>Projektowanie relacyjnych baz danych</li>
-            <li>Projektowanie algorytmów</li>
+            <li>VPS server management</li>
+            <li>Installation and configuration of server software</li>
+            <li>Designing relational databases</li>
+            <li>Designing algorithms</li>
           </ul>
         </div>
         <div>
-          <h4>Języki</h4>
+          <h4>Languages</h4>
           <p>🇬🇧 English - Intermediate - B2</p>
         </div>
       </div>
@@ -97,18 +134,18 @@
       <h3>Education</h3>
       <article>
         <div class='school'>
-          <span>2016-obecnie</span> <strong>Wyższa Szkoła Informatyki Stosowanej i Zarządzania WIT w Warszawie</strong>
+          <span>2016-now</span> <strong>Wyższa Szkoła Informatyki Stosowanej i Zarządzania WIT in Warsaw</strong>
         </div>
         <div class="descrition">
-          Inżynier (Inż.) oprogramowania.
+          Software engineer (Eng.).
         </div>
       </article>
       <article>
         <div class='school'>
-          <span>2013-2017</span> <strong>Szkoła Główna Gospodarstwa Wiejskiego w Warszawie</strong>
+          <span>2013-2017</span> <strong>Szkoła Główna Gospodarstwa Wiejskiego in Warsaw</strong>
         </div>
         <div>
-            Inżynier produkcji maszyn (Inż.) Technologia żywności i żywienie człowieka
+            Machine manufacturing engineer (Eng.) Food technology and human nutrition
         </div>
       </article>
     </section>
@@ -116,26 +153,27 @@
       <h3>Experience</h3>
       <article>
         <div class='job-title'>
-          <span>10.2018 - obecnie</span> <strong>Reprise Media</strong><br> <strong>Stanowisko:</strong> Biddable Media Specialist & Developer
+          <span>10.2018 - now</span> <strong>Reprise Media</strong><br> <strong>Job:</strong> Biddable Media Specialist & Developer
         </div>
         <div>
           <p><strong>Tech stack:</strong> ASP .NET MVC / C# / JavaScript / HTML / CSS</p>
           <ul class="job-description">
-            <li>Wdrażanie nowych narzędzi do obsługi raportowania.</li>
-            <li>Tworzenie API do raportowania.</li>
-            <li>Zarządzanie kampaniami Google Ads / FB </li>
+            <li>Responsible for many projects - Upper</li>
+            <li>Implementing new reporting tools.</li>
+            <li>Creating an API for reporting.</li>
+            <li>Google Ads campaign management/FB </li>
           </ul>
         </div>
       </article>
       <article>
         <div class='job-title'>
-          <span>04.2017 - 10.2018</span> <strong>Traffiqua</strong><br> <strong>Stanowisko:</strong> Specjalista automatyzacji - Programista
+          <span>04.2017 - 10.2018</span> <strong>Traffiqua</strong><br> <strong>Job:</strong> Automation specialist - Programmer
         </div>
         <div>
           <p><strong>Tech stack:</strong> PHP / JavaScript / AdWords Scripts</p>
           <ul class="job-description">
-            <li>Zarządzanie kampaniami reklamowymi.</li>
-            <li>Tworzenie software-u do obsługi marketingowej.</li>
+            <li>Management of advertising campaigns.</li>
+            <li>Creating software for marketing services.</li>
           </ul>
         </div>
       </article>
