--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <h3>Education</h3>
       <article>
         <div class='school'>
-          <span>2016-now</span> <strong>Wyższa Szkoła Informatyki Stosowanej i Zarządzania WIT in Warsaw</strong>
+          <span>2016-2020</span> <strong>Wyższa Szkoła Informatyki Stosowanej i Zarządzania WIT in Warsaw</strong>
         </div>
         <div class="descrition">
           Software engineer (Eng.).
@@ -160,6 +160,22 @@
     </section>
     <section>
       <h3>Experience</h3>
+      <article>
+        <div class='job-title'>
+          <span>01.2022 - now</span> <strong>PKO Bank Polski</strong><br> <strong>Job:</strong> Senior Web Analytics Developer
+        </div>
+        <div>
+          <p><strong>Tech stack:</strong>        
+            <p>Backend: .NET Core / C#</p>
+            <p>Frontend: Blazor / JavaScript / HTML / CSS Frameworks</p>
+          <ul class="job-description">
+            <li>Responsible for Google Marketing Platform Tools</li>
+            <li>Implementing new reporting applications.</li>
+            <li>Creating an API for reporting.</li>
+            <li>Creating full stack apps for teams</li>
+          </ul>
+        </div>
+      </article>
       <article>
         <div class='job-title'>
           <span>10.2018 - now</span> <strong>Reprise Media</strong><br> <strong>Job:</strong> Biddable Media Specialist & Developer
